nuevo parrafo en el index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
         <section>
             <h1> Git y Github</h1>
+            <p> este es un nuevo parrafo</p>
             <a href="./paginas/productos.html">lista de productos</a>
         </section>
     </main>
